--- a/resumeuploaderreactjsui/package.json
+++ b/resumeuploaderreactjsui/package.json
@@ -5,16 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.82",
-    "@mui/material": "^5.8.0",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
